--- a/resources/sass/rating.scss
+++ b/resources/sass/rating.scss
@@ -8,7 +8,7 @@
         background-size: 300px;
         background-repeat: no-repeat;
         display: inline-block;
-        margin: auto 10px;
+        margin: auto 10px auto 0;
         vertical-align: middle;
     }
 
