--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -133,9 +133,14 @@
                     display: flex;
                     overflow-x: auto;
                     flex-wrap: nowrap;
-                    .prod-img {
-                        width: 50px;
-                        height: 50px;
+                    .variant-img {
+                        width: 40px;
+                        height: 40px;
+                    }
+                    .variant-img.active {
+                        -webkit-box-shadow: 0px 0px 0px 2px #ffcc00;
+                        -moz-box-shadow: 0px 0px 0px 2px #ffcc00;
+                        box-shadow: 0px 0px 0px 2px #ffcc00;;
                     }
                 }
             }
@@ -160,10 +165,14 @@
             .-name {
                 text-decoration: none;
                 color: $secondary-color;
-                font-size: 30px;
+                font-size: 26px;
             }
             .offer-price {
                 color: $product-price;
+                font-size: 24px;
+            }
+            .original-price {
+                font-size: 24px;
             }
             .price {
                 font-size: 0.8em;
@@ -326,12 +335,14 @@
         font-size: 14px;
         font-weight: 600;
         .pdp-buy-btn {
+            text-align: center;
+            display: inline-block;
             width: 30%;
             color: $primary-color;
             background-color: $secondary-color;
-            font-size: 14px;
+            font-size: 12px;
             border-radius: 10px;
-            margin: 10px 0px;
+            margin: 2px 0px;
         }
         span {
             color: $black;
@@ -353,6 +364,7 @@
     .detailspage {
         .container {
             padding: 0px;
+            margin: 0px;
             color: $black;
         }
     }
@@ -426,7 +438,7 @@
 }
 #scroll-bar-img {
     ::-webkit-scrollbar {
-        width: 20px;
+        width: 10px;
     }
     ::-webkit-scrollbar-track {
         box-shadow: inset 0 0 5px grey;
