--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -21,12 +21,11 @@
                 .variant-img {
                     width: 40px;
                     height: 40px;
-                    
                 }
                 .variant-img.active {
                     -webkit-box-shadow: 0px 0px 1px 2px #ffcc00;
                     -moz-box-shadow: 0px 0px 1px 2px #ffcc00;
-                    box-shadow: 0px 0px 1px 2px #ffcc00;;
+                    box-shadow: 0px 0px 1px 2px #ffcc00;
                 }
                 [data-title] {
                     position: relative;
@@ -37,7 +36,7 @@
                 [data-title]:hover::before {
                     content: attr(data-title);
                     position: absolute;
-                    bottom: -30px;
+                    bottom: -40px;
                     display: inline-block;
                     padding: 3px 6px;
                     border-radius: 2px;
@@ -53,7 +52,7 @@
                 [data-title]:hover::after {
                     content: '';
                     position: absolute;
-                    bottom: -7px;
+                    bottom: -18px;
                     left: 15px;
                     display: inline-block;
                     color: #fff;
@@ -65,7 +64,7 @@
     }
     .prod-desc {
         .d-none {
-            display:none;
+            display: none;
         }
     }
     .prod-desc {
@@ -81,7 +80,6 @@
             padding-left: 10px;
         }
     }
-
 }
 .slick-lightbox {
     .slick-lightbox-inner {
