--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -72,6 +72,11 @@
             display: none;
         }
     }
+    .prod-desc {
+        .d-none {
+            display: none;
+        }
+    }
     .-product-details {
         margin: 10px 5px 10px 0;
         .original-price {
