--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -129,7 +129,7 @@
             .variation-options {
                 max-width: 375px;
                 overflow-x: scroll;
-                overflow: hidden;
+                overflow: auto;
                 .swatch-images {
                     display: flex;
                     flex-wrap: nowrap;
