mobile details fixes + rugs image

--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -5,12 +5,7 @@
     .detailspage {
         min-height: calc(100vh - (155px));
         .wishlist-icon {
-            @include media-breakpoint-up(md) {
-                position: absolute;
-                right: 0px;
-                top: 0;
-                font-size: 21px;
-            }
+                font-size: 24px;
             &.marked {
                 .-icon {
                     font-weight: 900;
@@ -135,8 +130,8 @@
                     flex-wrap: nowrap;
                     padding: 5px 0 10px 0;
                     .variant-img {
-                        width: 40px;
-                        height: 40px;
+                        width: 30px;
+                        height: 30px;
                     }
                     .variant-img.active {
                         -webkit-box-shadow: 0px 0px 0px 2px #ffcc00;
@@ -163,6 +158,7 @@
             }
         }
         .-product-details {
+            margin: 10px 0 0 0;
             .-name {
                 text-decoration: none;
                 color: $secondary-color;
@@ -170,16 +166,14 @@
             }
             .offer-price {
                 color: $product-price;
-                font-size: 20px;
-            }
-            .original-price {
-                font-size: 20px;
+                font-size: 25px;
+                margin-right: 10px;
             }
             .price {
                 font-size: 0.8em;
                 text-decoration: line-through;
                 display: inline-block;
-                margin-left: 10px;
+                margin-left: 0;
                 font-size: 25px;
             }
         }
@@ -225,7 +219,8 @@
         }
 
         .rating-container {
-            margin: auto auto 0px auto;
+            position: absolute;
+            right: 20px;
             text-decoration: none;
             color: $secondary-color;
             display: inline-block;
@@ -338,10 +333,10 @@
         .pdp-buy-btn {
             text-align: center;
             display: inline-block;
-            width: 30%;
+            width: 35%;
             color: $primary-color;
             background-color: $secondary-color;
-            font-size: 12px;
+            font-size: 15px;
             border-radius: 10px;
             margin: 2px 0px;
         }
