--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -176,6 +176,50 @@ input:disabled + .checkmark + .text {
     .listing,
     .category-page {
         .listing-container {
+            .mobile-filter-header {
+                padding: 0 15px;
+                border-bottom: 1px solid $white;
+            }
+            .tab-column {
+                padding: 0 0 10px 0;
+                height: 100vh;
+                -webkit-box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.75);
+                -moz-box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.75);
+                box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.75);
+
+            }
+            .filter-tabs {
+                .nav {
+                    padding-left: 0;
+                    .nav-item {
+                        text-align: center;
+                        .nav-link {
+                            padding: .5rem;
+                            color:$primary-color;
+                        }
+                    }
+                }
+            }
+            .filter {
+                display: none;
+                .clear-btn {
+                    text-align: right;
+                    padding: 10px 10px 0 0;
+                    label {
+                        color: $secondary-color;
+                    }
+                }
+                .filter-item {
+                    color: $secondary-color;
+                }
+            }
+            .filter.selected {
+                display: block;
+            }
+            .nav-link.selected {
+                background-color: $white;
+                color: $secondary-color!important;
+            }
             .listing-top-controls {
                 position: relative;
                 width: 100%;
