filter and details page update

--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -141,7 +141,7 @@
 .product-modal-body {
     position: relative;
     flex: 1 1 auto;
-    padding: 15px;
+    padding: 15px 15px 0 15px;
 }
 .product-modal-dialog {
     margin: 0 auto;
