--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -5,7 +5,7 @@
     .detailspage {
         min-height: calc(100vh - (155px));
         .wishlist-icon {
-                font-size: 24px;
+            font-size: 24px;
             &.marked {
                 .-icon {
                     font-weight: 900;
@@ -15,7 +15,7 @@
         .product-navigator {
             margin: 5px;
         }
-        
+
         .filters.filters-mobile {
             width: 100% !important;
             background: $secondary-color;
@@ -100,18 +100,17 @@
         }
 
         .-images-container {
-            height: 280px;
+            height: 250px;
             overflow-x: auto;
-            margin: 5px 0 15px;
+            margin: 5px 0;
             @include media-breakpoint-up(md) {
                 margin: 15px 0px;
             }
             .-images {
                 overflow-x: scroll;
                 overflow-y: hidden;
-                height: 280px;
+                height: 250px;
                 white-space: nowrap;
-                padding: 15px 0;
                 .-prod-img {
                     max-height: 100%;
                     display: inline-block;
@@ -136,7 +135,7 @@
                     .variant-img.active {
                         -webkit-box-shadow: 0px 0px 0px 2px #ffcc00;
                         -moz-box-shadow: 0px 0px 0px 2px #ffcc00;
-                        box-shadow: 0px 0px 0px 2px #ffcc00;;
+                        box-shadow: 0px 0px 0px 2px #ffcc00;
                     }
                 }
             }
@@ -162,19 +161,21 @@
             .-name {
                 text-decoration: none;
                 color: $secondary-color;
-                font-size: 22px;
+                font-size: 20px;
             }
             .offer-price {
                 color: $product-price;
-                font-size: 25px;
+                font-size: 20px;
                 margin-right: 10px;
+                display: inline-block;
+                margin-top: 6px;
             }
             .price {
                 font-size: 0.8em;
                 text-decoration: line-through;
                 display: inline-block;
                 margin-left: 0;
-                font-size: 25px;
+                font-size: 20px;
             }
         }
 
@@ -322,7 +323,6 @@
     opacity: 1;
 }
 @include media-breakpoint-down(md) {
-    
     .nav {
         padding-left: 10px;
     }
