--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -28,7 +28,7 @@ input:disabled + .checkmark + .text {
 .listing {
     min-height: calc(100vh - (195px));
     @include media-breakpoint-up(md) {
-        min-height: calc(100vh - (145px));    
+        min-height: calc(100vh - (145px));
     }
     .slick-prev,
     .slick-next {
@@ -178,24 +178,25 @@ input:disabled + .checkmark + .text {
         .listing-container {
             .mobile-filter-header {
                 padding: 0 15px;
-                border-bottom: 1px solid $white;
             }
             .tab-column {
                 padding: 0 0 10px 0;
-                height: 100vh;
-                -webkit-box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.75);
-                -moz-box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.75);
-                box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.75);
-
+            }
+            .filters-height {
+                height: calc(100% - 30px);
+            }
+            .total-results {
+                color: $secondary-color;
+                padding: 5px 30px 0 0;
+                text-align: right;
             }
             .filter-tabs {
                 .nav {
-                    padding-left: 0;
+                    padding-left: 15px;
                     .nav-item {
-                        text-align: center;
                         .nav-link {
-                            padding: .5rem;
-                            color:$primary-color;
+                            padding: 0.5rem 0.5rem 1rem 0.5rem;
+                            color: $primary-color;
                         }
                     }
                 }
@@ -204,7 +205,7 @@ input:disabled + .checkmark + .text {
                 display: none;
                 .clear-btn {
                     text-align: right;
-                    padding: 10px 10px 0 0;
+                    padding-right: 10px;
                     label {
                         color: $secondary-color;
                     }
@@ -215,10 +216,11 @@ input:disabled + .checkmark + .text {
             }
             .filter.selected {
                 display: block;
+                padding-right: 20px;
             }
             .nav-link.selected {
                 background-color: $white;
-                color: $secondary-color!important;
+                color: $secondary-color !important;
             }
             .listing-top-controls {
                 position: relative;
