filters ui and gtm code

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,6 +26,7 @@ $facebook: #3b5998;
 $category-bg: #21334b;
 $products-bg: #ffcc00;
 $product-price: #b76e79;
+$icons-color: #929292;
 
 // Main colors
 $primary-color: #ffcc00;
