--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -14,8 +14,14 @@
             a {
                 color: $secondary-color;
             }
+            .new-tag {
+                display: inline-block;
+                margin-right: 5px;
+                color: $brown-text-color;
+            }
             .-site {
                 color: $text-subtle;
+                
             }
             .-name {
                 white-space: nowrap;
@@ -25,8 +31,12 @@
             }
             .-prices {
                 .-cprice {
-                    color: #b76e79;
+                    color: $secondary-color;
                     margin-right: 10px;
+                    &.sale {
+                        color: $product-price;
+                    }
+                    
                 }
 
                 .-oldprice {
@@ -63,18 +73,16 @@
                     z-index: 100;
                     color: $white;
                 }
-
-                .wishlist-icon {
+                .tile-icon {
                     position: absolute;
-                    margin: 15px;
-                    top: 0px;
-                    right: 0px;
                     z-index: 50;
                     color: $icons-color;
-                    .-icon {
-                        font-size: 20px;
-                    }
-
+                    top: 0;
+                    margin: 0 10px;
+                    font-size: 20px
+                }
+                .wishlist-icon {
+                    right: 0px;
                     &.marked {
                         .-icon {
                             font-weight: 900;
@@ -82,12 +90,7 @@
                     }
                 }
                 .multiple-variants-icon {
-                    position: absolute;
                     right: 40px;
-                    top: 10px;
-                    z-index: 50;
-                    font-size: 21px;
-                    color: $icons-color;
                 }
                 
                 .-name {
@@ -98,15 +101,20 @@
             }
 
             @media only screen and (max-width: 768px) {
+                .new-tag {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                    background: #ffffffba;
+                    padding: 2px 6px;
+                }
                 &.item-3 {
                     @include make-col(1, 3);
 
-                    .wishlist-icon {
-                        margin: 10px;
-
-                        .-icon {
-                            font-size: 14px;
-                        }
+                    .tile-icon {
+                        margin: 0 10px;
+                        font-size: 14px;
                     }
                     .prod-info {
                         font-size: 12px;
@@ -120,10 +128,8 @@
                 &.item-1 {
                     @include make-col(1, 1);
 
-                    .wishlist-icon {
-                        .-icon {
-                            font-size: 30px;
-                        }
+                    .tile-icon {
+                        font-size: 30px;
                     }
 
                     .prod-info {
